# package details
[metadata]
name = hunter-io-client
version = 1.0.0
description = Python client for hunter io api
author = Rizwan Hameed
author_email = rizwanbutt314@gmail.com
classifiers = 
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >= 3.12
install_requires = 
    django-stubs==5.2.2
    flake8==7.3.0
    isort==6.0.1
    mypy==1.17.1
    pydantic==2.11.7
    pyflakes==3.4.0
    requests==2.32.4
    types-requests==2.32.4.20250611

# Code quality
[flake8]
dictionaries = en_US,python,technical,django
ignore = W503,WPS226,WPS227,WPS235,WPS473,WPS601,DAR101,DAR201,DAR301,DAR401
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[mypy]
python_version = 3.11
allow_redefinition = False
check_untyped_defs = True
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
no_implicit_optional = True
no_implicit_reexport = True
show_error_codes = True
strict_equality = True
strict_optional = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
plugins = pydantic.mypy

# [mypy.plugins.django-stubs]
# django_settings_module = config.settings.test

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[coverage:run]
omit = *migrations*, *tests*
plugins = django_coverage_plugin

[isort]
line_length = 120
include_trailing_comma = True
use_parentheses = True
multi_line_output = 3